--- a/404.html
+++ b/404.html
@@ -52,42 +52,20 @@
                     </ul><span class="navbar-text actions"> <a class="btn btn-light action-button" role="button" href="admin.blaxrew-studios.vision" style="margin-bottom: 0px;">Open Dashboard</a></span></div>
             </div>
         </nav>
-        <div class="header-dark" style="background: url(&quot;assets/img/image0005%20-%20Kopie_222.jpg&quot;) center / cover;">
-            <div class="container hero">
-                <div class="row">
-                    <div class="col-md-8 offset-md-2">
-                        <h1 class="text-center" style="font-family: ethnocentric;font-size: 3em;">BlaXrew Studios</h1>
-                        <h1 class="text-center" style="font-family: sans-serif;">Software, Games &amp; More</h1>
-                    </div>
-                </div>
-            </div>
-        </div>
     </div>
     <div></div>
     <div class="text-white bg-dark">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-light" style="margin-top: 25px;">
-                    <h1>BlaXrew Studios</h1>
-                    <p>Were a small team producing Software, Games, Music, Videos, Movies and other stuff. Many software projects are open source and available on github. If you want to learn more about our projects click&nbsp; &nbsp;&nbsp;<a href="projects.html">here</a>.<br><br></p>
+                    <h1>404</h1>
+                    <h4><strong>File not found</strong><br></h4>
+                    <p>We couldn't find this url on our server. Maybe&nbsp; you'd like to try our&nbsp; &nbsp;<a href="404.html">homepage</a>&nbsp; &nbsp;&nbsp;instead?<br></p>
                 </div>
             </div>
         </div>
     </div>
     <div></div>
-    <div class="text-light bg-dark newsletter-subscribe">
-        <div class="container">
-            <div class="intro">
-                <h2 class="text-center">Subscribe for our Newsletter</h2>
-                <p class="text-center text-white-50">Nunc luctus in metus eget fringilla. Aliquam sed justo ligula. Vestibulum nibh erat, pellentesque ut laoreet vitae. </p>
-            </div>
-            <form class="form-inline" data-bss-recipient="c6268884f198426de24f9a36bbd9ca7d" data-bss-subject="Newsletter Subs">
-                <div class="form-group"><input class="form-control" type="email" name="email" placeholder="Your Email"></div>
-                <div class="form-group"><button class="btn btn-primary disabled" id="isub" type="submit" disabled="" style="margin-bottom: 0px;">Subscribe </button></div>
-            </form>
-        </div>
-        <div class="form-check" style="margin-left: 37%;padding-top: 10px;"><input class="form-check-input" type="checkbox" id="itogBtn"><label class="form-check-label text-light" for="tapa">By continuing you agree to our <a href="Terms%20of%20Service.html">Tems of&nbsp; Service</a>&nbsp; and&nbsp; <a href="privacy%20policy.html">Privacy&nbsp; Policy</a>.&nbsp;</label></div>
-    </div>
     <div class="footer-dark">
         <footer>
             <div class="container">
