--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
                 <div class="collapse navbar-collapse"
                     id="navcol-2">
                     <ul class="nav navbar-nav mr-auto">
-                        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="404.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link active" href="about.html">About</a></li>
                         <li class="nav-item"></li>
                         <li class="nav-item dropdown" href="projects.html"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="projects.html">Projects</a>
@@ -49,7 +49,7 @@
                         </li>
                         <li class="nav-item"><a class="nav-link" href="news.html">News</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Forum</a></li>
-                    </ul><span class="navbar-text actions"> <a class="login" href="#">Log In</a><a class="btn btn-light action-button" role="button" href="#" style="margin-bottom: 0px;">Sign Up</a></span></div>
+                    </ul><span class="navbar-text actions"> <a class="btn btn-light action-button" role="button" href="admin.blaxrew-studios.vision" style="margin-bottom: 0px;">Open Dashboard</a></span></div>
             </div>
         </nav>
     </div>
@@ -74,7 +74,7 @@
             <input
                 class="form-control" type="text" name="subject" placeholder="Subject" style="margin-bottom: 15px;">
                 <div class="form-group"><textarea class="form-control" name="message" placeholder="Message" rows="14"></textarea></div>
-                <div class="form-group"><button class="btn btn-primary btn-block" id="asend" type="submit" disabled="" style="margin-left: 0px;">send </button></div>
+                <div class="form-group"><button class="btn btn-primary disabled btn-block" id="asend" type="submit" disabled="" style="margin-left: 0px;">send </button></div>
                 <div class="form-check" style="padding-top: 10px;"><input class="form-check-input" type="checkbox" id="atogBtn"><label class="form-check-label text-light" for="tapa" style="font-size: 0.83em;">By continuing you agree to our <a href="Terms%20of%20Service.html">Tems of&nbsp; Service</a>&nbsp; and&nbsp; <a href="privacy%20policy.html">Privacy&nbsp; Policy</a>.&nbsp;</label></div>
         </form>
     </div>
