--- a/devils-hunt.html
+++ b/devils-hunt.html
@@ -39,7 +39,7 @@
                 <div class="collapse navbar-collapse"
                     id="navcol-2">
                     <ul class="nav navbar-nav mr-auto">
-                        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="404.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                         <li class="nav-item"></li>
                         <li class="nav-item dropdown" href="projects.html"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="projects.html">Projects</a>
@@ -49,7 +49,7 @@
                         </li>
                         <li class="nav-item"><a class="nav-link" href="news.html">News</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Forum</a></li>
-                    </ul><span class="navbar-text actions"> <a class="login" href="#">Log In</a><a class="btn btn-light action-button" role="button" href="#" style="margin-bottom: 0px;">Sign Up</a></span></div>
+                    </ul><span class="navbar-text actions"> <a class="btn btn-light action-button" role="button" href="admin.blaxrew-studios.vision" style="margin-bottom: 0px;">Open Dashboard</a></span></div>
             </div>
         </nav>
     </div>
@@ -164,7 +164,7 @@
                                 </div>
                             </div>
                         </div>
-                        <p>Subscribe to our newsletter and follow us&nbsp; online to find out when the game launches.<a class="btn btn-outline-primary" role="button" style="margin-top: 16px;" href="index.html#newsletter-subscribe" target="_parent">Learn More</a></p>
+                        <p>Subscribe to our newsletter and follow us&nbsp; online to find out when the game launches.<a class="btn btn-outline-primary" role="button" style="margin-top: 16px;" href="404.html#newsletter-subscribe" target="_parent">Learn More</a></p>
                     </div>
                 </div>
             </div>
