--- a/projects.html
+++ b/projects.html
@@ -39,7 +39,7 @@
                 <div class="collapse navbar-collapse"
                     id="navcol-1">
                     <ul class="nav navbar-nav mr-auto">
-                        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="404.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                         <li class="nav-item"></li>
                         <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="projects.html">Projects</a>
@@ -49,7 +49,7 @@
                         </li>
                         <li class="nav-item"><a class="nav-link" href="news.html">News</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Forum</a></li>
-                    </ul><span class="navbar-text actions"> <a class="login" href="#">Log In</a><a class="btn btn-light action-button" role="button" href="#" style="margin-bottom: 0px;">Sign Up</a></span></div>
+                    </ul><span class="navbar-text actions"> <a class="btn btn-light action-button" role="button" href="admin.blaxrew-studios.vision" style="margin-bottom: 0px;">Open Dashboard</a></span></div>
             </div>
         </nav>
     </div>
@@ -121,7 +121,7 @@
                         <div class="col-md-12 col-lg-5"><a href="#"><img class="img-fluid" src="assets/img/image0005%20-%20Kopie.png" style="margin-top: 5px;"></a></div>
                         <div class="col">
                             <h3 class="name">Tower Climber</h3>
-                            <p class="text-white-50 description">This is a 3D (FPS Controlled) game which you play online with other players together.</p><button class="btn btn-outline-primary btn-block btn-sm" type="button" style="margin-top: 5px;margin-left: 0px;" disabled="">Learn More</button></div>
+                            <p class="text-white-50 description">This is a 3D (FPS Controlled) game which you play online with other players together.</p><button class="btn btn-outline-primary disabled btn-block btn-sm" type="button" style="margin-top: 5px;margin-left: 0px;" disabled="">Learn More</button></div>
                     </div>
                 </div>
             </div>
