--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <div class="collapse navbar-collapse"
                     id="navcol-2">
                     <ul class="nav navbar-nav mr-auto">
-                        <li class="nav-item"><a class="nav-link active" href="404.html">Home</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                         <li class="nav-item"></li>
                         <li class="nav-item dropdown" href="projects.html"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="projects.html">Projects</a>
