--- a/projects.html
+++ b/projects.html
@@ -107,7 +107,7 @@
                 </div>
                 <div class="col-sm-6 item">
                     <div class="row">
-                        <div class="col-md-12 col-lg-5"><a href="#"></a><img class="img-fluid" src="assets/img/Banner%201%201920x1080.png" style="margin-top: 15px;"></div>
+                        <div class="col-md-12 col-lg-5"><a href="#"></a><img class="img-fluid" src="assets/img/image0005%20-%20Kopie.png" style="margin-top: 15px;"></div>
                         <div class="col">
                             <h3 class="name">The Invaders</h3>
                             <p class="text-white-50 description">The Invaders is about exploring and invading worlds in teams of equal size.<br></p><a class="btn btn-outline-primary btn-block btn-sm" role="button" style="margin-top: 5px;margin-left: 0px;" href="las.html">Learn More</a>
