--- a/las.html
+++ b/las.html
@@ -184,7 +184,7 @@
                                 </div>
                             </div>
                         </div>
-                        <p>Subscribe to our newsletter and follow us&nbsp; online to find out when the game launches.<a class="btn btn-outline-primary" role="button" style="margin-top: 16px;" href="404.html#newsletter-subscribe" target="_parent">Learn More</a></p>
+                        <p>Subscribe to our newsletter and follow us&nbsp; online to find out when the game launches.<a class="btn btn-outline-primary" role="button" style="margin-top: 16px;" href="impressum.html#newsletter-subscribe" target="_parent">Learn More</a></p>
                     </div>
                 </div>
             </div>
@@ -233,7 +233,7 @@
                     </div>
                     <div class="col-md-6 item text">
                         <h3>BlaXrew Studios<br></h3>
-                        <p>Here you can find our&nbsp; &nbsp;terms and policies:&nbsp;&nbsp;<br>-&nbsp; <a href="privacy%20policy.html">Privacy Policy</a><br>- <a href="Terms%20of%20Service.html">Terms of service</a><br>- <a href="impressum.html">Impressum (DE)</a></p>
+                        <p>Here you can find our&nbsp; &nbsp;terms and policies:&nbsp;&nbsp;<br>-&nbsp; <a href="privacy%20policy.html">Privacy Policy</a><br>- <a href="Terms%20of%20Service.html">Terms of service</a><br>- <a href="404.html">Impressum (DE)</a></p>
                     </div>
                     <div class="col item social"><a href="http://twitter.com/blaxrew"><i class="icon ion-social-twitter"></i></a><a href="https://www.youtube.com/channel/UChOC9uRCoD2-5hzFGEnnOJA"><i class="icon ion-social-youtube"></i></a><a href="http://github.com/blaxrewstudios"><i class="icon ion-social-github"></i></a><a href="https://steamcommunity.com/groups/blaxrew-studios"><i class="fab fa-steam-symbol"></i></a><a href="https://discord.com/invite/ySRCsyW"><i class="fab fa-discord"></i></a><a href="mailto:blaxrewstudios.official@gmail.com"><i class="icon ion-ios-email"></i></a></div>
                 </div>
@@ -263,7 +263,6 @@
     </div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/smart-forms.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
     <script src="assets/js/audioJS.js"></script>
     <script src="assets/js/Cookie-Banner.js"></script>
