--- a/impressum.html
+++ b/impressum.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Home - BlaXrew Studios</title>
+    <title>BlaXrew Studios</title>
     <meta name="twitter:card" content="summary">
     <meta name="twitter:description" content="Software, Games &amp; More">
     <meta name="twitter:title" content="BlaXrew Studios">
